landing page and graphics

--- a/client/partials/icons.html
+++ b/client/partials/icons.html
@@ -7,7 +7,7 @@
 			<symbol id="icn_swipeLeft" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Swipe left</desc>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="swipeLeft" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="swipe_left" fill="currentColor">
 		                <g id="palm-finger" transform="translate(23.000000, 16.000000)">
 		                    <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
@@ -29,7 +29,7 @@
 			<symbol id="icn_swipeUp" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Swipe top</desc>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="swipeUp" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="swipe_top_icn" fill="currentColor">
 			            <g id="palm-finger" transform="translate(23.000000, 16.000000)">
 			                <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
@@ -52,7 +52,7 @@
 			<symbol id="icn_swipeDown" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Swipe down</desc>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="swipeDown" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="swipe_bottom_icn" fill="currentColor">
 		                <g id="palm-finger" transform="translate(23.000000, 16.000000)">
 		                    <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
@@ -70,11 +70,12 @@
 		        </g>
 			</symbol>
 
+
 			<!-- tap -->
 			<symbol id="icn_tap" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Tap</desc>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="tap" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="tap_icn" fill="currentColor">
 		                <g id="palm-finger" transform="translate(23.000000, 16.000000)">
 		                    <path d="M21,27.1174996 C23.5411314,26.3897518 26.22505,26 29,26 C45.0162577,26 58,38.9837423 58,55 C58,71.0162577 45.0162577,84 29,84 C12.9837423,84 0,71.0162577 0,55 C0,44.4736203 5.60835962,35.2571431 14,30.1756474 L14,34.9981691 C7.92776649,39.5592007 4,46.8209108 4,55 C4,68.8071187 15.1928813,80 29,80 C42.8071187,80 54,68.8071187 54,55 C54,41.1928813 42.8071187,30 29,30 C26.2021981,30 23.511739,30.4595891 21,31.3073899 L21,27.1174996 Z" id="Combined-Shape"></path>
@@ -93,12 +94,13 @@
 		        </g>
 			</symbol>
 
+
 			<!-- click -->
 			<symbol id="icn_click" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Click</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="click" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="click_icn" fill="currentColor">
 			            <path d="M75,45 C75,31.1928813 63.8071187,20 50,20 C36.1928813,20 25,31.1928813 25,45 L25,71 C25,84.8071187 36.1928813,96 50,96 C63.8071187,96 75,84.8071187 75,71 L75,45 Z M21,45 L21,74 L21.1532912,74 C22.6544785,88.6066696 34.9967118,100 50,100 C65.0032882,100 77.3455215,88.6066696 78.8467088,74 L79,74 L79,45 C79,28.9837423 66.0162577,16 50,16 C33.9837423,16 21,28.9837423 21,45 Z" id="Combined-Shape"></path>
 			            <rect id="Rectangle-13-Copy-2" x="48" y="20" width="4" height="22"></rect>
@@ -109,12 +111,13 @@
 			    </g>
 			</symbol>
 
+
 			<!-- menu -->
 			<symbol id="icn_menu" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Menu</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="menu" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="menu" fill="currentColor">
 			            <path d="M0,92 L0,94 L42.252035,94 C43.1401206,97.4504544 46.2723211,100 50,100 C53.7276789,100 56.8598794,97.4504544 57.747965,94 L100,94 L100,92 L100,29 L96,29 L96,90 L54,90 L54,92.0000001 C54,94.209139 52.209139,96 50,96 C47.790861,96 46,94.209139 46,92 L46,90 L4,90 L4,29 L0,29 L0,92 Z" id="Combined-Shape"></path>
 			            <path d="M12,74.7226834 L50.099929,84.9315286 L88,74.7762352 L88,13 L92,13 L92,78 L91.423559,78 L50.471303,88.9731239 L50.4215483,89.158811 L8.77629889,78 L8,78 L8,13 L12,13 L12,74.7226834 Z" id="Combined-Shape"></path>
@@ -124,12 +127,13 @@
 			    </g>
 			</symbol>
 
+
 			<!-- arrow key right -->
 			<symbol id="icn_arrowKeyRight" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Arrow key right</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="arrowKeyRight" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="keyboard-right" fill="currentColor">
 		                <path d="M68,55.0042577 C68,52.7927672 69.7890275,51 72.0042577,51 L95.9957423,51 C98.2072328,51 100,52.7890275 100,55.0042577 L100,78.9957423 C100,81.2072328 98.2109725,83 95.9957423,83 L72.0042577,83 C69.7927672,83 68,81.2109725 68,78.9957423 L68,55.0042577 Z M79,71 L79,63 L87,67 L79,71 Z" id="Combined-Shape-Copy-4"></path>
 		                <path d="M0,55.0042577 C0,52.7927672 1.78902751,51 4.0042577,51 L27.9957423,51 C30.2072328,51 32,52.7890275 32,55.0042577 L32,78.9957423 C32,81.2072328 30.2109725,83 27.9957423,83 L4.0042577,83 C1.79276724,83 0,81.2109725 0,78.9957423 L0,55.0042577 Z M2,54.9912443 C2,53.8915104 2.89989752,53 3.99124431,53 L28.0087557,53 C29.1084896,53 30,53.8998975 30,54.9912443 L30,79.0087557 C30,80.1084896 29.1001025,81 28.0087557,81 L3.99124431,81 C2.89151044,81 2,80.1001025 2,79.0087557 L2,54.9912443 Z M10,73 L10,61 L22,67 L10,73 Z M11,71 L11,63 L19,67 L11,71 Z" id="Combined-Shape-Copy-5" transform="translate(16.000000, 67.000000) rotate(-180.000000) translate(-16.000000, -67.000000) "></path>
@@ -139,12 +143,13 @@
 		        </g>
 			</symbol>
 
+
 			<!-- arrow key down -->
 			<symbol id="icn_arrowKeyDown" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Arrow key down</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="arrowKeyDown" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="keyboard-down" fill="currentColor">
 		                <path d="M68,55.0042577 C68,52.7927672 69.7890275,51 72.0042577,51 L95.9957423,51 C98.2072328,51 100,52.7890275 100,55.0042577 L100,78.9957423 C100,81.2072328 98.2109725,83 95.9957423,83 L72.0042577,83 C69.7927672,83 68,81.2109725 68,78.9957423 L68,55.0042577 Z M70,54.9912443 C70,53.8915104 70.8998975,53 71.9912443,53 L96.0087557,53 C97.1084896,53 98,53.8998975 98,54.9912443 L98,79.0087557 C98,80.1084896 97.1001025,81 96.0087557,81 L71.9912443,81 C70.8915104,81 70,80.1001025 70,79.0087557 L70,54.9912443 Z M78,73 L78,61 L90,67 L78,73 Z M79,71 L79,63 L87,67 L79,71 Z" id="Combined-Shape"></path>
 		                <path d="M7.10542736e-15,55.0042577 C7.10542736e-15,52.7927672 1.78902751,51 4.0042577,51 L27.9957423,51 C30.2072328,51 32,52.7890275 32,55.0042577 L32,78.9957423 C32,81.2072328 30.2109725,83 27.9957423,83 L4.0042577,83 C1.79276724,83 7.10542736e-15,81.2109725 7.10542736e-15,78.9957423 L7.10542736e-15,55.0042577 Z M2,54.9912443 C2,53.8915104 2.89989752,53 3.99124431,53 L28.0087557,53 C29.1084896,53 30,53.8998975 30,54.9912443 L30,79.0087557 C30,80.1084896 29.1001025,81 28.0087557,81 L3.99124431,81 C2.89151044,81 2,80.1001025 2,79.0087557 L2,54.9912443 Z M10,73 L10,61 L22,67 L10,73 Z M11,71 L11,63 L19,67 L11,71 Z" id="Combined-Shape-Copy-2" transform="translate(16.000000, 67.000000) rotate(-180.000000) translate(-16.000000, -67.000000) "></path>
@@ -156,11 +161,12 @@
 		        </g>
 			</symbol>
 
+
 			<!-- key enter -->
 			<symbol id="icn_keyEnter" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Enter key</desc>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="keyEnter" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="keyboard-enter" fill="currentColor">
 		                <path d="M42,46 L42,34 L54,40 L42,46 Z M43,44 L43,36 L51,40 L43,44 Z" id="Combined-Shape" transform="translate(48.000000, 40.000000) rotate(-180.000000) translate(-48.000000, -40.000000) "></path>
 		                <rect id="Rectangle-86" x="54" y="38" width="20" height="4"></rect>
@@ -171,11 +177,12 @@
 		        </g>
 			</symbol>
 
+
 			<!-- email -->
 			<symbol id="icn_email" viewBox="0 0 100 100">
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Email</desc>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="email" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 		            <g id="email" fill="currentColor">
 		                <path d="M7.16941738,82 L93.1715729,82 L72.5619228,61.39035 L75.39035,58.5619228 L96,79.1715729 L96,25.8284271 L52.8284271,69 L52.9142136,69.0857864 L50.0857864,71.9142136 L50,71.8284271 L49.9142136,71.9142136 L47.0857864,69.0857864 L47.1715729,69 L4,25.8284271 L4,79.5125631 L24.8477182,58.6648449 L27.6761454,61.493272 L7.16941738,82 Z M3.16941738,86 L100,86 L100,84 L100,21 L100,19 L2,19 L0,19 L0,86 L2,86 L3.13514613,86 L3.15228176,86.0171356 L3.16941738,86 Z M6.82842712,23 L93.1715729,23 L50,66.1715729 L6.82842712,23 Z" id="Combined-Shape"></path>
 		            </g>
@@ -188,7 +195,7 @@
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Arrow next</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="arrowNext" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="arrow-next" fill="currentColor">
 			            <g id="Imported-Layers" transform="translate(50.500000, 50.000000) rotate(-360.000000) translate(-50.500000, -50.000000) translate(22.000000, 0.000000)">
 			                <polygon id="Fill-1" points="52.3226667 50 2.828 99.4946667 0 96.6666667 49.4946667 47.172"></polygon>
@@ -205,7 +212,7 @@
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Arrow previous</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="arrowPrev" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="arrow-prev" fill="currentColor">
 			            <g id="Imported-Layers" transform="translate(50.000000, 50.000000) scale(-1, 1) rotate(-360.000000) translate(-50.000000, -50.000000) translate(21.000000, 0.000000)">
 			                <polygon id="Fill-1" points="53 50 3.50533333 99.4946667 0.677333333 96.6666667 50.172 47.172"></polygon>
@@ -222,7 +229,7 @@
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>New window</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="newWindow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="new-window" fill="currentColor">
 			            <path d="M50,14 L50,0 L0,0 L0,50 L21,50 L21,46 L4,46 L4,4 L46,4 L46,14 L50,14 Z" id="Combined-Shape"></path>
 			            <rect id="Rectangle-102" x="4" y="8" width="42" height="2"></rect>
@@ -244,7 +251,7 @@
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Download</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="download" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 			        <g id="download" fill="currentColor">
 			            <path d="M75,56.2939708 C77.5418216,60.6057145 79,65.6325693 79,71 C79,87.0162577 66.0162577,100 50,100 C33.9837423,100 21,87.0162577 21,71 C21,65.6325693 22.4581784,60.6057145 25,56.2939708 L25,71 C25,84.8071187 36.1928813,96 50,96 C63.8071187,96 75,84.8071187 75,71 L75,56.2939708 Z" id="Combined-Shape"></path>
 			            <path d="M52.8284271,69 L78.9142136,42.9142136 L76.0857864,40.0857864 L50,66.1715729 L24.0857864,40.2573593 L21.2573593,43.0857864 L47.1715729,69 L47.0857864,69.0857864 L49.9142136,71.9142136 L50,71.8284271 L50.0857864,71.9142136 L52.9142136,69.0857864 L52.8284271,69 Z" id="Combined-Shape"></path>
@@ -259,7 +266,7 @@
 			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
 			    <desc>Cross</desc>
 			    <defs></defs>
-			    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			    <g id="cross" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 				    <g id="cross" fill="currentColor">
 				        <g id="Group">
 				            <polygon id="Fill-1" transform="translate(26.161333, 73.333333) rotate(-360.000000) translate(-26.161333, -73.333333) " points="52.3226667 50 2.828 99.4946667 0 96.6666667 49.4946667 47.172"></polygon>
@@ -271,6 +278,60 @@
 				</g>
 			</symbol>
 			
+
+			<!-- bullet -->
+			<symbol id="icn_bullet" viewBox="0 0 100 100">
+			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
+			    <desc>Bullet</desc>
+			    <defs></defs>
+				<g id="bullet" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				    <g id="bulletfill" fill="currentColor">
+				        <circle id="Combined-Shape" cx="52" cy="50" r="29"></circle>
+				    </g>
+				</g>
+			</symbol>
+
+			<!-- empty bulltet -->
+			<symbol id="icn_emptyBullet" viewBox="0 0 100 100">
+			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
+			    <desc>Empty bullet</desc>
+			    <defs></defs>
+				<g id="bulletEmpty" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				    <g id="bullet_empty" fill="currentColor">
+				        <path d="M52,79 C68.0162577,79 81,66.0162577 81,50 C81,33.9837423 68.0162577,21 52,21 C35.9837423,21 23,33.9837423 23,50 C23,66.0162577 35.9837423,79 52,79 Z M52,75 C65.8071187,75 77,63.8071187 77,50 C77,36.1928813 65.8071187,25 52,25 C38.1928813,25 27,36.1928813 27,50 C27,63.8071187 38.1928813,75 52,75 Z" id="Combined-Shape"></path>
+				    </g>
+				</g>
+			</symbol>
+
+			<!-- portfolio -->
+			<symbol id="icn_portfolio" viewBox="0 0 100 100">
+			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
+			    <desc>Portfolio covers flow</desc>
+			    <defs></defs>
+				<g id="portfolio" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				    <g id="portfoliofill" fill="currentColor">
+				        <g id="Group" transform="translate(1.000000, 22.000000)">
+				            <path d="M4,43 L4,50 L9,50 L9,54 L0,54 L0,2 L9,2 L9,6 L4,6 L4,39 L9,39 L9,43 L4,43 Z" id="Combined-Shape"></path>
+				            <path d="M98,6 L98,2 L89,2 L89,54 L98,54 L98,50 L93,50 L93,6 L98,6 Z" id="Combined-Shape-Copy-2" transform="translate(93.500000, 28.000000) scale(-1, 1) translate(-93.500000, -28.000000) "></path>
+				            <path d="M16,44 L16,52 L82,52 L82,4 L16,4 L16,40 L32,40 L32,44 L16,44 Z M12,0 L86,0 L86,56 L12,56 L12,0 Z" id="Combined-Shape"></path>
+				        </g>
+				    </g>
+				</g>
+			</symbol>
+
+
+			<!-- home -->
+			<symbol id="icn_home" viewBox="0 0 100 100">
+			    <!-- Generator: Sketch 3.8.3 (29802) - http://www.bohemiancoding.com/sketch -->
+			    <desc>Home</desc>
+			    <defs></defs>
+				<g id="home" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				    <g id="homeFill" fill="currentColor">
+				        <path d="M58,96 L77,96 L77,46 L27,46 L27,96 L46,96 L46,63 L58,63 L58,96 Z M81,44.8284271 L81,100 L23,100 L23,44.6568542 L16.8284271,50.8284271 L14,48 L28,34 L28,7 L28.0164023,7 C28.2736953,3.09098409 31.5258787,0 35.5,0 C39.4741213,0 42.7263047,3.09098409 42.9835977,7 L43,7 L43,19 L49.0857864,12.9142136 L49,12.8284271 L51.8284271,10 L51.9142136,10.0857864 L52,10 L54.8284271,12.8284271 L54.7426407,12.9142136 L90.1568542,48.3284271 L87.3284271,51.1568542 L81,44.8284271 Z M78.1715729,42 L25.6568542,42 L51.9142136,15.7426407 L78.1715729,42 Z M39,23 L39,14.1349534 C37.9551411,14.6872685 36.7640917,15 35.5,15 C34.2359083,15 33.0448589,14.6872685 32,14.1349534 L32,30 L39,23 Z M35.5,11 C37.4329966,11 39,9.43299662 39,7.5 C39,5.56700338 37.4329966,4 35.5,4 C33.5670034,4 32,5.56700338 32,7.5 C32,9.43299662 33.5670034,11 35.5,11 Z" id="Combined-Shape"></path>
+				        <path d="M52.5,39 C56.6421356,39 60,35.6421356 60,31.5 C60,27.3578644 56.6421356,24 52.5,24 C48.3578644,24 45,27.3578644 45,31.5 C45,35.6421356 48.3578644,39 52.5,39 Z M52.5,35 C54.4329966,35 56,33.4329966 56,31.5 C56,29.5670034 54.4329966,28 52.5,28 C50.5670034,28 49,29.5670034 49,31.5 C49,33.4329966 50.5670034,35 52.5,35 Z" id="Combined-Shape"></path>
+				    </g>
+				</g>
+			</symbol>
 		</svg>
 	</div>
 </template>
